--- a/style.css
+++ b/style.css
@@ -45,10 +45,10 @@ body{
     left: 0;
     bottom: 0;
     width: 100%;
-    font-size: medium;
+    font-size: smaller;
     text-align: center;
     font-family: 'Montserrat', sans-serif;
-    margin-bottom: 15px;
+    margin-bottom: 5px;
     color: azure;
     font-weight: 100;
 }
